fixed an issue that was causing the cancel and travel forms to be off center

--- a/css/create-account.css
+++ b/css/create-account.css
@@ -123,21 +123,20 @@ input[type=password]
   margin-bottom: 0px !important;
 }
 
-
-
 @media screen and (max-width:770px)
 {
-  body
-  {
-    text-align: center;
-  }
   .col-md-4
   {
     margin-bottom: 8%;
+    text-align: center;
   }
   #header
   {
     text-align: left;
     margin-left: 0;
+  }
+  .cancel, .travel
+  {
+  	width: 100%;
   }
 }
